feat: added possibility to update username
